# trdgnt

./: .env.example  .gitignore  Dockerfile  MAGE.md  MARKET_RESEARCH_PROMPT.md  README.md  SPEC.md  alpaca_bridge.py  daily_research.py  docker-compose.yml  eval_results  go.mod  magefile.go  main.py  news_monitor.py  news_monitor_config.py  pyproject.toml  trading_loop.py  update_positions.py  watch_agent.sh  why.txt
apps/: _path_setup.py  alpaca_bridge.py  analyze_conviction.py  daily_research.py  discovery_pipeline.py  news_monitor.py  news_monitor_config.py  news_monitor_triage.py  portfolio_review.py  screener.py  single_ticker.py  tier_manager.py  trading_loop.py  update_positions.py  watchlist_cleaner.py
config/: .env.example  MARKET_RESEARCH_PROMPT.md
dashboard/: Dockerfile  SPEC.md  disable-autostart.sh  run.sh  setup-autostart.sh
dashboard/backend/: config.py  main.py  news_monitor_compat.py  requirements.txt
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
data/logs/: 2026-03-26.checkpoint.json  2026-03-26.json  2026-03-27.checkpoint.json  2026-03-27.json  2026-03-30.json  2026-04-02.checkpoint.json  2026-04-02.json  2026-04-03.checkpoint.json  2026-04-03.json  2026-04-06.checkpoint.json  2026-04-06.json  2026-04-07.checkpoint.json  2026-04-07.json  equity_history.json  position_entries.json  signal_overrides.json  watchlist_overrides.json
docs/: AGENTS.md  README.md  SPEC.md
launchagent/: com.tradingagents.plist.template
results/: RESEARCH_FINDINGS_2026-03-25.md  RESEARCH_FINDINGS_2026-03-26.md  RESEARCH_FINDINGS_2026-03-30.md  RESEARCH_FINDINGS_2026-03-31.md  RESEARCH_FINDINGS_2026-04-01.md  RESEARCH_FINDINGS_2026-04-02.md  RESEARCH_FINDINGS_2026-04-03.md  RESEARCH_FINDINGS_2026-04-08.md  RESEARCH_FINDINGS_2026-04-09.md  RESEARCH_FINDINGS_2026-04-10.md  results
scripts/: alpaca_bridge.py  analyze_conviction.py  daily_research.py  move_to_src.sh  news_monitor.py  news_monitor_triage.py  tier_manager.py  trading_loop.py  watch_agent.sh  watchlist_cleaner.py
tests/: conftest.py  test_agent_decision_parser.py  test_analysis_date.py  test_daily_research.py  test_dynamic_watchlist.py  test_embedding_memory.py  test_execute_decision.py  test_finnhub.py  test_market_data_tools.py  test_memory_persistence.py  test_missing_coverage.py  test_news_debate.py  test_parallel_analysts.py  test_position_context.py  test_prompt_quality.py  test_reddit_bodies.py  test_redis_state.py  test_research_context.py  test_reuters.py  test_review_agents.py  test_safe_csv.py  test_screener.py  test_signal_processing.py  test_social_sentiment.py  test_stop_loss.py  test_thesis.py  test_ticket_035_ssl.py  test_ticket_039_base_url.py  test_ticket_041_validators.py  test_ticket_045_046_047_048.py  test_ticket_053_056.py  test_tickets_057_074.py  test_tier_debate_rounds.py  test_tool_call_guard.py  test_trading_loop_core.py  test_two_tier_llm.py  test_update_positions.py
tickets/: TICKET-001-fix-signal-extraction.md  TICKET-002-stop-loss-monitor.md  TICKET-003-dynamic-position-sizing.md  TICKET-004-persist-agent-memory.md  TICKET-005-inject-research-findings.md  TICKET-006-real-reddit-social-data.md  TICKET-007-position-awareness-in-prompts.md  TICKET-008-parallelise-analysts.md  TICKET-009-better-news-data.md  TICKET-010-gitignore-and-cleanup.md  TICKET-011-wire-reflect-and-remember.md  TICKET-012-csv-cache-cleanup.md  TICKET-013-sync-prompt-watchlist.md  TICKET-014-dead-code-cleanup.md  TICKET-015-fix-hardcoded-paths.md  TICKET-016-missing-tests.md  TICKET-017-readme-and-ticket-status.md  TICKET-018-critical-bug-fixes.md  TICKET-019-full-prompt-rewrite.md  TICKET-020-data-quality-fixes.md  TICKET-021-tier-based-analyst-selection.md  TICKET-022-dynamic-watchlist.md  TICKET-023-two-tier-llm.md  TICKET-024-fix-analysis-date.md  TICKET-025-full-prompt-rewrite.md  TICKET-026-embedding-memory.md  TICKET-027-tier-based-debate-rounds.md  TICKET-028-max-tool-call-guard.md  TICKET-029-reddit-post-bodies.md  TICKET-030-finnhub-api-key.md  TICKET-031-options-flow.md  TICKET-032-earnings-calendar.md  TICKET-033-analyst-price-targets.md  TICKET-034-reuters-full-text.md  TICKET-035-ssl-global-monkey-patch.md  TICKET-036-trading-loop-tests.md  TICKET-037-daily-research-tests.md  TICKET-038-update-positions-tests.md  TICKET-039-unify-alpaca-base-url.md  TICKET-040-fix-main-py.md  (+73 more)
trading_loop_logs/: 2026-03-23.json  2026-03-24.json  2026-03-25.checkpoint.json  2026-03-25.json  2026-03-26.checkpoint.json  2026-03-26.json  2026-03-30.checkpoint.json  2026-03-31.checkpoint.json  2026-03-31.json  2026-04-01.checkpoint.json  2026-04-01.json  2026-04-09.json  buy_quota_log.json  deployment_config.json  equity_history.json  position_entries.json  signal_overrides.json  watchlist_overrides.json
tradingagents/: buy_quota.py  conviction_bypass.py  default_config.py  research_context.py  sector_monitor.py  signal_override.py
(+1444 files in other folders)
